* Bugfix: Take Bluray chapter duration from directory as probed playtime from MTS segment is sometimes wrong.
* Bugfix: This was a bad one: The application crashed with a protection fault if there was not enough disk space 
        on the cache drive. This is now properly reported and transcoding aborted. Thanks for Muf for reporting
	the issue.
* Fix deprecation:

Important changes in 1.5 (2018-06-08)

* Feature: Add WebM output format using VP9 video and Opus audio codec.
* Feature: Input format check is now done by FFmpeg, that means if the input file is
           supported by FFmpeg, it will be transcoded. For performance, files are not
           opened and scanned, the file's extension is checked only (e.g. mp3, wav, rm etc.).
* Feature: Replaced mutagen-inspect with internal code which also works with WAV and WebM.
           test_tags works for all formats now. python-mutagen is no longer required.
* Feature: Check if sample rate or sample format is supported by audio codec and change if
           necessary. Avoid transcode fails e.g. if 44.1KHz sampling rate is requested but
           not supported (e.g. OPUS only supports 8K, 16K, 24K or 48K). Select nearest
           supported sample rate or sample format.

Important changes in 1.4 (2018-05-30)

* The timeout for suspend and abort have been changed. Decoding will now be suspended
  after 15 seconds (formerly 2 minutes). If no activity is detected after further 15 seconds
  (formerly 3 minutes) decoding will be aborted. This will only happen if the file is actively
  closed, so if playback is simply paused decoding will continue. The new limits proofed to
  be fine and reduce system load significantly.

* Feature: Enhanced logging, added a colour profile to screen logs and raised or lowered
           some messages log levels appropriately. Also added a few informative log 
           messages.
* Feature: Bluray support: Detect bluray files in directories and list separate chapters 